--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sofía :(</title>
     <link rel="stylesheet" href="estilos.css">
+            <script type='text/javascript'>
+            window.smartlook||(function(d) {
+              var o=smartlook=function(){ o.api.push(arguments)},h=d.getElementsByTagName('head')[0];
+              var c=d.createElement('script');o.api=new Array();c.async=true;c.type='text/javascript';
+              c.charset='utf-8';c.src='https://web-sdk.smartlook.com/recorder.js';h.appendChild(c);
+              })(document);
+              smartlook('init', 'c2bbfffbf2088fb644bbf65bd85a67dddf8e265c', { region: 'eu' });
+          </script>
 </head>
 <body>
 
